cmake_minimum_required(VERSION 3.7)
project(Project)

set(CMAKE_CXX_STANDARD 11)

include_directories(tOS Target Tools)

set(SOURCE_FILES
        Target/target.c
        Target/target.h
        tOS/tBitmap.c
        tOS/tCore.c
        tOS/tEvent.c
        tOS/tEvent.h
        tOS/tFlagGroup.c
        tOS/tFlagGroup.h
        tOS/tHooks.h
        tOS/tinyOS.h
        tOS/tLib.h
        tOS/tList.c
        tOS/tMBox.c
        tOS/tMBox.h
        tOS/tMemBlock.c
        tOS/tMemBlock.h
        tOS/tMutex.c
        tOS/tMutex.h
        tOS/tSem.c
        tOS/tSem.h
        tOS/tSlist.c
        tOS/tSwitch.c
        tOS/tTask.c
        tOS/tTask.h
        tOS/tTime.c
        tOS/tTimer.c
        tOS/tTimer.h
        "视频工程/C1.00 任务共享资源冲突-计数问题/App/app.c"
        "视频工程/C1.00 任务共享资源冲突-计数问题/App/app.h"
        "视频工程/C1.00 任务共享资源冲突-计数问题/App/shareCount.c"
        "视频工程/C1.00 任务共享资源冲突-计数问题/App/shareCount.h"
        "视频工程/C1.00 任务共享资源冲突-计数问题/App/task1.c"
        "视频工程/C1.00 任务共享资源冲突-计数问题/App/task2.c"
        "视频工程/C1.00 任务共享资源冲突-计数问题/App/task3.c"
        "视频工程/C1.00 任务共享资源冲突-计数问题/App/task4.c"
        "视频工程/C1.00 任务共享资源冲突-计数问题/App/tConfig.h"
        "视频工程/C1.00 任务共享资源冲突-计数问题/App/tCpu.c"
        "视频工程/C1.00 任务共享资源冲突-计数问题/App/tHooks.c"
        "视频工程/C1.00 任务共享资源冲突-计数问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.00 任务共享资源冲突-计数问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.00 任务共享资源冲突-计数问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.00 任务共享资源冲突-计数问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.00 任务共享资源冲突-计数问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.00 任务共享资源冲突-计数问题/RTE/RTE_Components.h"
        "视频工程/C1.01 任务共享资源冲突-临界区/App/app.c"
        "视频工程/C1.01 任务共享资源冲突-临界区/App/app.h"
        "视频工程/C1.01 任务共享资源冲突-临界区/App/shareCount.c"
        "视频工程/C1.01 任务共享资源冲突-临界区/App/shareCount.h"
        "视频工程/C1.01 任务共享资源冲突-临界区/App/task1.c"
        "视频工程/C1.01 任务共享资源冲突-临界区/App/task2.c"
        "视频工程/C1.01 任务共享资源冲突-临界区/App/task3.c"
        "视频工程/C1.01 任务共享资源冲突-临界区/App/task4.c"
        "视频工程/C1.01 任务共享资源冲突-临界区/App/tConfig.h"
        "视频工程/C1.01 任务共享资源冲突-临界区/App/tCpu.c"
        "视频工程/C1.01 任务共享资源冲突-临界区/App/tHooks.c"
        "视频工程/C1.01 任务共享资源冲突-临界区/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.01 任务共享资源冲突-临界区/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.01 任务共享资源冲突-临界区/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.01 任务共享资源冲突-临界区/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.01 任务共享资源冲突-临界区/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.01 任务共享资源冲突-临界区/RTE/RTE_Components.h"
        "视频工程/C1.02 任务共享资源冲突-调度锁/App/app.c"
        "视频工程/C1.02 任务共享资源冲突-调度锁/App/app.h"
        "视频工程/C1.02 任务共享资源冲突-调度锁/App/shareCount.c"
        "视频工程/C1.02 任务共享资源冲突-调度锁/App/shareCount.h"
        "视频工程/C1.02 任务共享资源冲突-调度锁/App/task1.c"
        "视频工程/C1.02 任务共享资源冲突-调度锁/App/task2.c"
        "视频工程/C1.02 任务共享资源冲突-调度锁/App/task3.c"
        "视频工程/C1.02 任务共享资源冲突-调度锁/App/task4.c"
        "视频工程/C1.02 任务共享资源冲突-调度锁/App/tConfig.h"
        "视频工程/C1.02 任务共享资源冲突-调度锁/App/tCpu.c"
        "视频工程/C1.02 任务共享资源冲突-调度锁/App/tHooks.c"
        "视频工程/C1.02 任务共享资源冲突-调度锁/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.02 任务共享资源冲突-调度锁/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.02 任务共享资源冲突-调度锁/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.02 任务共享资源冲突-调度锁/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.02 任务共享资源冲突-调度锁/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.02 任务共享资源冲突-调度锁/RTE/RTE_Components.h"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/App/app.c"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/App/app.h"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/App/shareCount.c"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/App/shareCount.h"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/App/task1.c"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/App/task2.c"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/App/task3.c"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/App/task4.c"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/App/tConfig.h"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/App/tCpu.c"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/App/tHooks.c"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.03 任务共享资源冲突-二值信号量/RTE/RTE_Components.h"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/App/app.c"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/App/app.h"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/App/shareCount.c"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/App/shareCount.h"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/App/task1.c"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/App/task2.c"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/App/task3.c"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/App/task4.c"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/App/tConfig.h"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/App/tCpu.c"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/App/tHooks.c"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.04 任务共享资源冲突-互斥信号量/RTE/RTE_Components.h"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/App/app.c"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/App/app.h"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/App/shareCount.c"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/App/shareCount.h"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/App/task1.c"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/App/task2.c"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/App/task3.c"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/App/task4.c"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/App/tConfig.h"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/App/tCpu.c"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/App/tHooks.c"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.05 任务共享资源冲突-事件标志组/RTE/RTE_Components.h"
        "视频工程/C1.06 任务共享资源冲突-邮箱/App/app.c"
        "视频工程/C1.06 任务共享资源冲突-邮箱/App/app.h"
        "视频工程/C1.06 任务共享资源冲突-邮箱/App/shareCount.c"
        "视频工程/C1.06 任务共享资源冲突-邮箱/App/shareCount.h"
        "视频工程/C1.06 任务共享资源冲突-邮箱/App/task1.c"
        "视频工程/C1.06 任务共享资源冲突-邮箱/App/task2.c"
        "视频工程/C1.06 任务共享资源冲突-邮箱/App/task3.c"
        "视频工程/C1.06 任务共享资源冲突-邮箱/App/task4.c"
        "视频工程/C1.06 任务共享资源冲突-邮箱/App/tConfig.h"
        "视频工程/C1.06 任务共享资源冲突-邮箱/App/tCpu.c"
        "视频工程/C1.06 任务共享资源冲突-邮箱/App/tHooks.c"
        "视频工程/C1.06 任务共享资源冲突-邮箱/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.06 任务共享资源冲突-邮箱/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.06 任务共享资源冲突-邮箱/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.06 任务共享资源冲突-邮箱/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.06 任务共享资源冲突-邮箱/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.06 任务共享资源冲突-邮箱/RTE/RTE_Components.h"
        "视频工程/C1.10 任务中断共享资源冲突-问题/App/app.c"
        "视频工程/C1.10 任务中断共享资源冲突-问题/App/app.h"
        "视频工程/C1.10 任务中断共享资源冲突-问题/App/task1.c"
        "视频工程/C1.10 任务中断共享资源冲突-问题/App/task2.c"
        "视频工程/C1.10 任务中断共享资源冲突-问题/App/task3.c"
        "视频工程/C1.10 任务中断共享资源冲突-问题/App/task4.c"
        "视频工程/C1.10 任务中断共享资源冲突-问题/App/tConfig.h"
        "视频工程/C1.10 任务中断共享资源冲突-问题/App/tCpu.c"
        "视频工程/C1.10 任务中断共享资源冲突-问题/App/tHooks.c"
        "视频工程/C1.10 任务中断共享资源冲突-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.10 任务中断共享资源冲突-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.10 任务中断共享资源冲突-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.10 任务中断共享资源冲突-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.10 任务中断共享资源冲突-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.10 任务中断共享资源冲突-问题/RTE/RTE_Components.h"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/App/app.c"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/App/app.h"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/App/task1.c"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/App/task2.c"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/App/task3.c"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/App/task4.c"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/App/tConfig.h"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/App/tCpu.c"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/App/tHooks.c"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.11 任务中断共享资源冲突-关总中断/RTE/RTE_Components.h"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/App/app.c"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/App/app.h"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/App/task1.c"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/App/task2.c"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/App/task3.c"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/App/task4.c"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/App/tConfig.h"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/App/tCpu.c"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/App/tHooks.c"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.12 任务中断共享资源冲突-关指定中断/RTE/RTE_Components.h"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/App/app.c"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/App/app.h"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/App/task1.c"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/App/task2.c"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/App/task3.c"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/App/task4.c"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/App/tConfig.h"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/App/tCpu.c"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/App/tHooks.c"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.13 任务中断共享资源冲突-缩短关中断时间/RTE/RTE_Components.h"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/App/app.c"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/App/app.h"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/App/task1.c"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/App/task2.c"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/App/task3.c"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/App/task4.c"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/App/tConfig.h"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/App/tCpu.c"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/App/tHooks.c"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.14 任务中断共享资源冲突-任务统一处理/RTE/RTE_Components.h"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/App/app.c"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/App/app.h"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/App/task1.c"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/App/task2.c"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/App/task3.c"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/App/task4.c"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/App/tConfig.h"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/App/tCpu.c"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/App/tHooks.c"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.20 嵌套中断共享资源冲突-问题/RTE/RTE_Components.h"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/App/app.c"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/App/app.h"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/App/task1.c"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/App/task2.c"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/App/task3.c"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/App/task4.c"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/App/tConfig.h"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/App/tCpu.c"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/App/tHooks.c"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.21 嵌套中断共享资源冲突-关中断/RTE/RTE_Components.h"
        "视频工程/C1.30 互相持有资源死锁-问题/App/app.c"
        "视频工程/C1.30 互相持有资源死锁-问题/App/app.h"
        "视频工程/C1.30 互相持有资源死锁-问题/App/task1.c"
        "视频工程/C1.30 互相持有资源死锁-问题/App/task2.c"
        "视频工程/C1.30 互相持有资源死锁-问题/App/task3.c"
        "视频工程/C1.30 互相持有资源死锁-问题/App/task4.c"
        "视频工程/C1.30 互相持有资源死锁-问题/App/tConfig.h"
        "视频工程/C1.30 互相持有资源死锁-问题/App/tCpu.c"
        "视频工程/C1.30 互相持有资源死锁-问题/App/tHooks.c"
        "视频工程/C1.30 互相持有资源死锁-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.30 互相持有资源死锁-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.30 互相持有资源死锁-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.30 互相持有资源死锁-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.30 互相持有资源死锁-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.30 互相持有资源死锁-问题/RTE/RTE_Components.h"
        "视频工程/C1.31 互相持有资源死锁-打破锁/App/app.c"
        "视频工程/C1.31 互相持有资源死锁-打破锁/App/app.h"
        "视频工程/C1.31 互相持有资源死锁-打破锁/App/task1.c"
        "视频工程/C1.31 互相持有资源死锁-打破锁/App/task2.c"
        "视频工程/C1.31 互相持有资源死锁-打破锁/App/task3.c"
        "视频工程/C1.31 互相持有资源死锁-打破锁/App/task4.c"
        "视频工程/C1.31 互相持有资源死锁-打破锁/App/tConfig.h"
        "视频工程/C1.31 互相持有资源死锁-打破锁/App/tCpu.c"
        "视频工程/C1.31 互相持有资源死锁-打破锁/App/tHooks.c"
        "视频工程/C1.31 互相持有资源死锁-打破锁/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C1.31 互相持有资源死锁-打破锁/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C1.31 互相持有资源死锁-打破锁/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C1.31 互相持有资源死锁-打破锁/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C1.31 互相持有资源死锁-打破锁/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C1.31 互相持有资源死锁-打破锁/RTE/RTE_Components.h"
        "视频工程/C2.00 任务间简单单向同步-问题/App/app.c"
        "视频工程/C2.00 任务间简单单向同步-问题/App/app.h"
        "视频工程/C2.00 任务间简单单向同步-问题/App/task1.c"
        "视频工程/C2.00 任务间简单单向同步-问题/App/task2.c"
        "视频工程/C2.00 任务间简单单向同步-问题/App/task3.c"
        "视频工程/C2.00 任务间简单单向同步-问题/App/task4.c"
        "视频工程/C2.00 任务间简单单向同步-问题/App/tConfig.h"
        "视频工程/C2.00 任务间简单单向同步-问题/App/tCpu.c"
        "视频工程/C2.00 任务间简单单向同步-问题/App/tHooks.c"
        "视频工程/C2.00 任务间简单单向同步-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C2.00 任务间简单单向同步-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C2.00 任务间简单单向同步-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C2.00 任务间简单单向同步-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C2.00 任务间简单单向同步-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C2.00 任务间简单单向同步-问题/RTE/RTE_Components.h"
        "视频工程/C2.01 任务间简单单向同步-信号量/App/app.c"
        "视频工程/C2.01 任务间简单单向同步-信号量/App/app.h"
        "视频工程/C2.01 任务间简单单向同步-信号量/App/task1.c"
        "视频工程/C2.01 任务间简单单向同步-信号量/App/task2.c"
        "视频工程/C2.01 任务间简单单向同步-信号量/App/task3.c"
        "视频工程/C2.01 任务间简单单向同步-信号量/App/task4.c"
        "视频工程/C2.01 任务间简单单向同步-信号量/App/tConfig.h"
        "视频工程/C2.01 任务间简单单向同步-信号量/App/tCpu.c"
        "视频工程/C2.01 任务间简单单向同步-信号量/App/tHooks.c"
        "视频工程/C2.01 任务间简单单向同步-信号量/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C2.01 任务间简单单向同步-信号量/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C2.01 任务间简单单向同步-信号量/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C2.01 任务间简单单向同步-信号量/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C2.01 任务间简单单向同步-信号量/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C2.01 任务间简单单向同步-信号量/RTE/RTE_Components.h"
        "视频工程/C2.10 任务间多事件单向同步-问题/App/app.c"
        "视频工程/C2.10 任务间多事件单向同步-问题/App/app.h"
        "视频工程/C2.10 任务间多事件单向同步-问题/App/task1.c"
        "视频工程/C2.10 任务间多事件单向同步-问题/App/task2.c"
        "视频工程/C2.10 任务间多事件单向同步-问题/App/task3.c"
        "视频工程/C2.10 任务间多事件单向同步-问题/App/task4.c"
        "视频工程/C2.10 任务间多事件单向同步-问题/App/tConfig.h"
        "视频工程/C2.10 任务间多事件单向同步-问题/App/tCpu.c"
        "视频工程/C2.10 任务间多事件单向同步-问题/App/tHooks.c"
        "视频工程/C2.10 任务间多事件单向同步-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C2.10 任务间多事件单向同步-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C2.10 任务间多事件单向同步-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C2.10 任务间多事件单向同步-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C2.10 任务间多事件单向同步-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C2.10 任务间多事件单向同步-问题/RTE/RTE_Components.h"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/App/app.c"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/App/app.h"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/App/task1.c"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/App/task2.c"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/App/task3.c"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/App/task4.c"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/App/tConfig.h"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/App/tCpu.c"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/App/tHooks.c"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C2.11 任务间多事件单向同步-事件标志组/RTE/RTE_Components.h"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/App/app.c"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/App/app.h"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/App/task1.c"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/App/task2.c"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/App/task3.c"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/App/task4.c"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/App/tConfig.h"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/App/tCpu.c"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/App/tHooks.c"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C2.12 任务间多事件单向同步-邮箱/RTE/RTE_Components.h"
        "视频工程/C2.20 任务间双向同步-问题/App/app.c"
        "视频工程/C2.20 任务间双向同步-问题/App/app.h"
        "视频工程/C2.20 任务间双向同步-问题/App/task1.c"
        "视频工程/C2.20 任务间双向同步-问题/App/task2.c"
        "视频工程/C2.20 任务间双向同步-问题/App/task3.c"
        "视频工程/C2.20 任务间双向同步-问题/App/task4.c"
        "视频工程/C2.20 任务间双向同步-问题/App/tConfig.h"
        "视频工程/C2.20 任务间双向同步-问题/App/tCpu.c"
        "视频工程/C2.20 任务间双向同步-问题/App/tHooks.c"
        "视频工程/C2.20 任务间双向同步-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C2.20 任务间双向同步-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C2.20 任务间双向同步-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C2.20 任务间双向同步-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C2.20 任务间双向同步-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C2.20 任务间双向同步-问题/RTE/RTE_Components.h"
        "视频工程/C2.21 任务间双向同步-信号量/App/app.c"
        "视频工程/C2.21 任务间双向同步-信号量/App/app.h"
        "视频工程/C2.21 任务间双向同步-信号量/App/task1.c"
        "视频工程/C2.21 任务间双向同步-信号量/App/task2.c"
        "视频工程/C2.21 任务间双向同步-信号量/App/task3.c"
        "视频工程/C2.21 任务间双向同步-信号量/App/task4.c"
        "视频工程/C2.21 任务间双向同步-信号量/App/tConfig.h"
        "视频工程/C2.21 任务间双向同步-信号量/App/tCpu.c"
        "视频工程/C2.21 任务间双向同步-信号量/App/tHooks.c"
        "视频工程/C2.21 任务间双向同步-信号量/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C2.21 任务间双向同步-信号量/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C2.21 任务间双向同步-信号量/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C2.21 任务间双向同步-信号量/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C2.21 任务间双向同步-信号量/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C2.21 任务间双向同步-信号量/RTE/RTE_Components.h"
        "视频工程/C2.30 中断任务单向同步-问题/App/app.c"
        "视频工程/C2.30 中断任务单向同步-问题/App/app.h"
        "视频工程/C2.30 中断任务单向同步-问题/App/task1.c"
        "视频工程/C2.30 中断任务单向同步-问题/App/task2.c"
        "视频工程/C2.30 中断任务单向同步-问题/App/task3.c"
        "视频工程/C2.30 中断任务单向同步-问题/App/task4.c"
        "视频工程/C2.30 中断任务单向同步-问题/App/tConfig.h"
        "视频工程/C2.30 中断任务单向同步-问题/App/tCpu.c"
        "视频工程/C2.30 中断任务单向同步-问题/App/tHooks.c"
        "视频工程/C2.30 中断任务单向同步-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C2.30 中断任务单向同步-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C2.30 中断任务单向同步-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C2.30 中断任务单向同步-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C2.30 中断任务单向同步-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C2.30 中断任务单向同步-问题/RTE/RTE_Components.h"
        "视频工程/C2.31 中断任务单向同步-事件标志组/App/app.c"
        "视频工程/C2.31 中断任务单向同步-事件标志组/App/app.h"
        "视频工程/C2.31 中断任务单向同步-事件标志组/App/task1.c"
        "视频工程/C2.31 中断任务单向同步-事件标志组/App/task2.c"
        "视频工程/C2.31 中断任务单向同步-事件标志组/App/task3.c"
        "视频工程/C2.31 中断任务单向同步-事件标志组/App/task4.c"
        "视频工程/C2.31 中断任务单向同步-事件标志组/App/tConfig.h"
        "视频工程/C2.31 中断任务单向同步-事件标志组/App/tCpu.c"
        "视频工程/C2.31 中断任务单向同步-事件标志组/App/tHooks.c"
        "视频工程/C2.31 中断任务单向同步-事件标志组/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C2.31 中断任务单向同步-事件标志组/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C2.31 中断任务单向同步-事件标志组/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C2.31 中断任务单向同步-事件标志组/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C2.31 中断任务单向同步-事件标志组/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C2.31 中断任务单向同步-事件标志组/RTE/RTE_Components.h"
        "视频工程/C2.32 多任务同步链死锁-问题/App/app.c"
        "视频工程/C2.32 多任务同步链死锁-问题/App/app.h"
        "视频工程/C2.32 多任务同步链死锁-问题/App/task1.c"
        "视频工程/C2.32 多任务同步链死锁-问题/App/task2.c"
        "视频工程/C2.32 多任务同步链死锁-问题/App/task3.c"
        "视频工程/C2.32 多任务同步链死锁-问题/App/task4.c"
        "视频工程/C2.32 多任务同步链死锁-问题/App/tConfig.h"
        "视频工程/C2.32 多任务同步链死锁-问题/App/tCpu.c"
        "视频工程/C2.32 多任务同步链死锁-问题/App/tHooks.c"
        "视频工程/C2.32 多任务同步链死锁-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C2.32 多任务同步链死锁-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C2.32 多任务同步链死锁-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C2.32 多任务同步链死锁-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C2.32 多任务同步链死锁-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C2.32 多任务同步链死锁-问题/RTE/RTE_Components.h"
        "视频工程/C3.00 任务间数据通信-问题/App/app.c"
        "视频工程/C3.00 任务间数据通信-问题/App/app.h"
        "视频工程/C3.00 任务间数据通信-问题/App/task1.c"
        "视频工程/C3.00 任务间数据通信-问题/App/task2.c"
        "视频工程/C3.00 任务间数据通信-问题/App/task3.c"
        "视频工程/C3.00 任务间数据通信-问题/App/task4.c"
        "视频工程/C3.00 任务间数据通信-问题/App/tConfig.h"
        "视频工程/C3.00 任务间数据通信-问题/App/tCpu.c"
        "视频工程/C3.00 任务间数据通信-问题/App/tHooks.c"
        "视频工程/C3.00 任务间数据通信-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C3.00 任务间数据通信-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C3.00 任务间数据通信-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C3.00 任务间数据通信-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C3.00 任务间数据通信-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C3.00 任务间数据通信-问题/RTE/RTE_Components.h"
        "视频工程/C3.01 单向数据通信-全局数据无同步/App/app.c"
        "视频工程/C3.01 单向数据通信-全局数据无同步/App/app.h"
        "视频工程/C3.01 单向数据通信-全局数据无同步/App/task1.c"
        "视频工程/C3.01 单向数据通信-全局数据无同步/App/task2.c"
        "视频工程/C3.01 单向数据通信-全局数据无同步/App/task3.c"
        "视频工程/C3.01 单向数据通信-全局数据无同步/App/task4.c"
        "视频工程/C3.01 单向数据通信-全局数据无同步/App/tConfig.h"
        "视频工程/C3.01 单向数据通信-全局数据无同步/App/tCpu.c"
        "视频工程/C3.01 单向数据通信-全局数据无同步/App/tHooks.c"
        "视频工程/C3.01 单向数据通信-全局数据无同步/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C3.01 单向数据通信-全局数据无同步/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C3.01 单向数据通信-全局数据无同步/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C3.01 单向数据通信-全局数据无同步/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C3.01 单向数据通信-全局数据无同步/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C3.01 单向数据通信-全局数据无同步/RTE/RTE_Components.h"
        "视频工程/C3.02 单向数据通信-全局数据有同步/App/app.c"
        "视频工程/C3.02 单向数据通信-全局数据有同步/App/app.h"
        "视频工程/C3.02 单向数据通信-全局数据有同步/App/task1.c"
        "视频工程/C3.02 单向数据通信-全局数据有同步/App/task2.c"
        "视频工程/C3.02 单向数据通信-全局数据有同步/App/task3.c"
        "视频工程/C3.02 单向数据通信-全局数据有同步/App/task4.c"
        "视频工程/C3.02 单向数据通信-全局数据有同步/App/tConfig.h"
        "视频工程/C3.02 单向数据通信-全局数据有同步/App/tCpu.c"
        "视频工程/C3.02 单向数据通信-全局数据有同步/App/tHooks.c"
        "视频工程/C3.02 单向数据通信-全局数据有同步/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C3.02 单向数据通信-全局数据有同步/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C3.02 单向数据通信-全局数据有同步/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C3.02 单向数据通信-全局数据有同步/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C3.02 单向数据通信-全局数据有同步/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C3.02 单向数据通信-全局数据有同步/RTE/RTE_Components.h"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/App/app.c"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/App/app.h"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/App/task1.c"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/App/task2.c"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/App/task3.c"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/App/task4.c"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/App/tConfig.h"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/App/tCpu.c"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/App/tHooks.c"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C3.03 单向数据通信-邮箱-直传数据/RTE/RTE_Components.h"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/App/app.c"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/App/app.h"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/App/task1.c"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/App/task2.c"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/App/task3.c"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/App/task4.c"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/App/tConfig.h"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/App/tCpu.c"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/App/tHooks.c"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C3.04 单向数据通信-邮箱-消息指针/RTE/RTE_Components.h"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/App/app.c"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/App/app.h"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/App/task1.c"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/App/task2.c"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/App/task3.c"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/App/task4.c"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/App/tConfig.h"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/App/tCpu.c"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/App/tHooks.c"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C3.05 单向数据通信-邮箱-紧急消息/RTE/RTE_Components.h"
        "视频工程/C4.00 系统时钟节拍设置-问题/App/app.c"
        "视频工程/C4.00 系统时钟节拍设置-问题/App/app.h"
        "视频工程/C4.00 系统时钟节拍设置-问题/App/task1.c"
        "视频工程/C4.00 系统时钟节拍设置-问题/App/task2.c"
        "视频工程/C4.00 系统时钟节拍设置-问题/App/task3.c"
        "视频工程/C4.00 系统时钟节拍设置-问题/App/task4.c"
        "视频工程/C4.00 系统时钟节拍设置-问题/App/tConfig.h"
        "视频工程/C4.00 系统时钟节拍设置-问题/App/tCpu.c"
        "视频工程/C4.00 系统时钟节拍设置-问题/App/tHooks.c"
        "视频工程/C4.00 系统时钟节拍设置-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C4.00 系统时钟节拍设置-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C4.00 系统时钟节拍设置-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C4.00 系统时钟节拍设置-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C4.00 系统时钟节拍设置-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C4.00 系统时钟节拍设置-问题/RTE/RTE_Components.h"
        "视频工程/C4.10 系统延时精度-问题/App/app.c"
        "视频工程/C4.10 系统延时精度-问题/App/app.h"
        "视频工程/C4.10 系统延时精度-问题/App/task1.c"
        "视频工程/C4.10 系统延时精度-问题/App/task2.c"
        "视频工程/C4.10 系统延时精度-问题/App/task3.c"
        "视频工程/C4.10 系统延时精度-问题/App/task4.c"
        "视频工程/C4.10 系统延时精度-问题/App/tConfig.h"
        "视频工程/C4.10 系统延时精度-问题/App/tCpu.c"
        "视频工程/C4.10 系统延时精度-问题/App/tHooks.c"
        "视频工程/C4.10 系统延时精度-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C4.10 系统延时精度-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C4.10 系统延时精度-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C4.10 系统延时精度-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C4.10 系统延时精度-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C4.10 系统延时精度-问题/RTE/RTE_Components.h"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/App/app.c"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/App/app.h"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/App/task1.c"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/App/task2.c"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/App/task3.c"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/App/task4.c"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/App/tConfig.h"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/App/tCpu.c"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/App/tHooks.c"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C4.20 定时任务处理 - 一次性执行任务/RTE/RTE_Components.h"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/App/app.c"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/App/app.h"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/App/task1.c"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/App/task2.c"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/App/task3.c"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/App/task4.c"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/App/tConfig.h"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/App/tCpu.c"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/App/tHooks.c"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C4.30 定时任务处理 - 周期性执行任务/RTE/RTE_Components.h"
        "视频工程/C4.40 定时任务处理精度 - 问题/App/app.c"
        "视频工程/C4.40 定时任务处理精度 - 问题/App/app.h"
        "视频工程/C4.40 定时任务处理精度 - 问题/App/task1.c"
        "视频工程/C4.40 定时任务处理精度 - 问题/App/task2.c"
        "视频工程/C4.40 定时任务处理精度 - 问题/App/task3.c"
        "视频工程/C4.40 定时任务处理精度 - 问题/App/task4.c"
        "视频工程/C4.40 定时任务处理精度 - 问题/App/tConfig.h"
        "视频工程/C4.40 定时任务处理精度 - 问题/App/tCpu.c"
        "视频工程/C4.40 定时任务处理精度 - 问题/App/tHooks.c"
        "视频工程/C4.40 定时任务处理精度 - 问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C4.40 定时任务处理精度 - 问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C4.40 定时任务处理精度 - 问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C4.40 定时任务处理精度 - 问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C4.40 定时任务处理精度 - 问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C4.40 定时任务处理精度 - 问题/RTE/RTE_Components.h"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/App/app.c"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/App/app.h"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/App/task1.c"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/App/task2.c"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/App/task3.c"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/App/task4.c"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/App/tConfig.h"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/App/tCpu.c"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/App/tHooks.c"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C4.41 定时任务处理精度 - 精简行为/RTE/RTE_Components.h"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/App/app.c"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/App/app.h"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/App/task1.c"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/App/task2.c"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/App/task3.c"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/App/task4.c"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/App/tConfig.h"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/App/tCpu.c"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/App/tHooks.c"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C4.50 定时任务处理 - 资源访问互斥/RTE/RTE_Components.h"
        "视频工程/C5.00 定长存储分配/App/app.c"
        "视频工程/C5.00 定长存储分配/App/app.h"
        "视频工程/C5.00 定长存储分配/App/task1.c"
        "视频工程/C5.00 定长存储分配/App/task2.c"
        "视频工程/C5.00 定长存储分配/App/task3.c"
        "视频工程/C5.00 定长存储分配/App/task4.c"
        "视频工程/C5.00 定长存储分配/App/tConfig.h"
        "视频工程/C5.00 定长存储分配/App/tCpu.c"
        "视频工程/C5.00 定长存储分配/App/tHooks.c"
        "视频工程/C5.00 定长存储分配/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C5.00 定长存储分配/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C5.00 定长存储分配/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C5.00 定长存储分配/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C5.00 定长存储分配/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C5.00 定长存储分配/RTE/RTE_Components.h"
        "视频工程/C5.00 定长存储分配/tSwitchPendSVC.c"
        "视频工程/C6.00  中断快速处理任务延后处理/App/app.c"
        "视频工程/C6.00  中断快速处理任务延后处理/App/app.h"
        "视频工程/C6.00  中断快速处理任务延后处理/App/task1.c"
        "视频工程/C6.00  中断快速处理任务延后处理/App/task2.c"
        "视频工程/C6.00  中断快速处理任务延后处理/App/task3.c"
        "视频工程/C6.00  中断快速处理任务延后处理/App/task4.c"
        "视频工程/C6.00  中断快速处理任务延后处理/App/tConfig.h"
        "视频工程/C6.00  中断快速处理任务延后处理/App/tCpu.c"
        "视频工程/C6.00  中断快速处理任务延后处理/App/tHooks.c"
        "视频工程/C6.00  中断快速处理任务延后处理/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C6.00  中断快速处理任务延后处理/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C6.00  中断快速处理任务延后处理/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C6.00  中断快速处理任务延后处理/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C6.00  中断快速处理任务延后处理/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C6.00  中断快速处理任务延后处理/RTE/RTE_Components.h"
        "视频工程/C6.10 任务控制设备-问题/App/app.c"
        "视频工程/C6.10 任务控制设备-问题/App/app.h"
        "视频工程/C6.10 任务控制设备-问题/App/task1.c"
        "视频工程/C6.10 任务控制设备-问题/App/task2.c"
        "视频工程/C6.10 任务控制设备-问题/App/task3.c"
        "视频工程/C6.10 任务控制设备-问题/App/task4.c"
        "视频工程/C6.10 任务控制设备-问题/App/tConfig.h"
        "视频工程/C6.10 任务控制设备-问题/App/tCpu.c"
        "视频工程/C6.10 任务控制设备-问题/App/tHooks.c"
        "视频工程/C6.10 任务控制设备-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C6.10 任务控制设备-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C6.10 任务控制设备-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C6.10 任务控制设备-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C6.10 任务控制设备-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C6.10 任务控制设备-问题/RTE/RTE_Components.h"
        "视频工程/C6.11 任务控制设备-解答/App/app.c"
        "视频工程/C6.11 任务控制设备-解答/App/app.h"
        "视频工程/C6.11 任务控制设备-解答/App/task1.c"
        "视频工程/C6.11 任务控制设备-解答/App/task2.c"
        "视频工程/C6.11 任务控制设备-解答/App/task3.c"
        "视频工程/C6.11 任务控制设备-解答/App/task4.c"
        "视频工程/C6.11 任务控制设备-解答/App/tConfig.h"
        "视频工程/C6.11 任务控制设备-解答/App/tCpu.c"
        "视频工程/C6.11 任务控制设备-解答/App/tHooks.c"
        "视频工程/C6.11 任务控制设备-解答/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C6.11 任务控制设备-解答/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C6.11 任务控制设备-解答/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C6.11 任务控制设备-解答/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C6.11 任务控制设备-解答/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C6.11 任务控制设备-解答/RTE/RTE_Components.h"
        "视频工程/C6.20 紧急性事件处理-问题/App/app.c"
        "视频工程/C6.20 紧急性事件处理-问题/App/app.h"
        "视频工程/C6.20 紧急性事件处理-问题/App/task1.c"
        "视频工程/C6.20 紧急性事件处理-问题/App/task2.c"
        "视频工程/C6.20 紧急性事件处理-问题/App/task3.c"
        "视频工程/C6.20 紧急性事件处理-问题/App/task4.c"
        "视频工程/C6.20 紧急性事件处理-问题/App/tConfig.h"
        "视频工程/C6.20 紧急性事件处理-问题/App/tCpu.c"
        "视频工程/C6.20 紧急性事件处理-问题/App/tHooks.c"
        "视频工程/C6.20 紧急性事件处理-问题/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C6.20 紧急性事件处理-问题/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C6.20 紧急性事件处理-问题/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C6.20 紧急性事件处理-问题/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C6.20 紧急性事件处理-问题/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C6.20 紧急性事件处理-问题/RTE/RTE_Components.h"
        "视频工程/C6.21 紧急性事件处理-中断处理/App/app.c"
        "视频工程/C6.21 紧急性事件处理-中断处理/App/app.h"
        "视频工程/C6.21 紧急性事件处理-中断处理/App/task1.c"
        "视频工程/C6.21 紧急性事件处理-中断处理/App/task2.c"
        "视频工程/C6.21 紧急性事件处理-中断处理/App/task3.c"
        "视频工程/C6.21 紧急性事件处理-中断处理/App/task4.c"
        "视频工程/C6.21 紧急性事件处理-中断处理/App/tConfig.h"
        "视频工程/C6.21 紧急性事件处理-中断处理/App/tCpu.c"
        "视频工程/C6.21 紧急性事件处理-中断处理/App/tHooks.c"
        "视频工程/C6.21 紧急性事件处理-中断处理/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C6.21 紧急性事件处理-中断处理/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C6.21 紧急性事件处理-中断处理/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C6.21 紧急性事件处理-中断处理/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C6.21 紧急性事件处理-中断处理/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C6.21 紧急性事件处理-中断处理/RTE/RTE_Components.h"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/App/app.c"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/App/app.h"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/App/task1.c"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/App/task2.c"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/App/task3.c"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/App/task4.c"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/App/tConfig.h"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/App/tCpu.c"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/App/tHooks.c"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C6.22 紧急性事件处理-调高任务优先级/RTE/RTE_Components.h"
        "视频工程/C6.23 空闲任务的工作/App/app.c"
        "视频工程/C6.23 空闲任务的工作/App/app.h"
        "视频工程/C6.23 空闲任务的工作/App/task1.c"
        "视频工程/C6.23 空闲任务的工作/App/task2.c"
        "视频工程/C6.23 空闲任务的工作/App/task3.c"
        "视频工程/C6.23 空闲任务的工作/App/task4.c"
        "视频工程/C6.23 空闲任务的工作/App/tConfig.h"
        "视频工程/C6.23 空闲任务的工作/App/tCpu.c"
        "视频工程/C6.23 空闲任务的工作/App/tHooks.c"
        "视频工程/C6.23 空闲任务的工作/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C6.23 空闲任务的工作/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C6.23 空闲任务的工作/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C6.23 空闲任务的工作/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C6.23 空闲任务的工作/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C6.23 空闲任务的工作/RTE/RTE_Components.h"
        "视频工程/C7.00 Hooks函数/App/app.c"
        "视频工程/C7.00 Hooks函数/App/app.h"
        "视频工程/C7.00 Hooks函数/App/task1.c"
        "视频工程/C7.00 Hooks函数/App/task2.c"
        "视频工程/C7.00 Hooks函数/App/task3.c"
        "视频工程/C7.00 Hooks函数/App/task4.c"
        "视频工程/C7.00 Hooks函数/App/tConfig.h"
        "视频工程/C7.00 Hooks函数/App/tCpu.c"
        "视频工程/C7.00 Hooks函数/App/tHooks.c"
        "视频工程/C7.00 Hooks函数/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C7.00 Hooks函数/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C7.00 Hooks函数/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C7.00 Hooks函数/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C7.00 Hooks函数/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C7.00 Hooks函数/RTE/RTE_Components.h"
        "视频工程/C8.00 内核裁剪/App/app.c"
        "视频工程/C8.00 内核裁剪/App/app.h"
        "视频工程/C8.00 内核裁剪/App/task1.c"
        "视频工程/C8.00 内核裁剪/App/task2.c"
        "视频工程/C8.00 内核裁剪/App/task3.c"
        "视频工程/C8.00 内核裁剪/App/task4.c"
        "视频工程/C8.00 内核裁剪/App/tConfig.h"
        "视频工程/C8.00 内核裁剪/App/tCpu.c"
        "视频工程/C8.00 内核裁剪/App/tHooks.c"
        "视频工程/C8.00 内核裁剪/RTE/Device/STM32F103RC/RTE_Device.h"
        "视频工程/C8.00 内核裁剪/RTE/Device/STM32F103RC/system_stm32f10x.c"
        "视频工程/C8.00 内核裁剪/RTE/Device/STM32F103ZE/RTE_Device.h"
        "视频工程/C8.00 内核裁剪/RTE/Device/STM32F103ZE/stm32f10x_conf.h"
        "视频工程/C8.00 内核裁剪/RTE/Device/STM32F103ZE/system_stm32f10x.c"
        "视频工程/C8.00 内核裁剪/RTE/RTE_Components.h")

add_executable(Project ${SOURCE_FILES})